sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var x
	for (i<-0 to getNombreValeurs()-2)
	{
		while (x!=getNombreValeurs()-2) {
		if (plusPetit(i:Int, i+1:Int) :Boolean) 
		{
			echange(i:Int, i+1:Int)
			x=x+1
		}
		
		}
	}
}
